--- a/basic.html
+++ b/basic.html
@@ -30,7 +30,7 @@
     <style>
         .card{
             width: 400px;
-            background-color: red;
+            background-color: pink;
             padding: 20px;
             margin: 10px;
             border-radius: 50px;
